<resources>
    <string name="app_name">Takitou</string>
    <string name="attended">Tour của bạn</string>
    <string name="Hello">Xin chào</string>
    <string name="sign_in_to_continue">Đăng nhập để tiếp tục</string>
    <string name="forgot_password"><u>Quên mật khẩu?</u></string>
    <string name="action_sign_in_short">Đăng ký</string>
    <string name="email">Email</string>
    <string name="email_with_colon">Email:</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Xác nhận mật khẩu</string>
    <string name="name">Tên của bạn</string>
    <string name="max_length_20">Tối đa 20 kí tự</string>
    <string name="or">Hoặc</string>
    <string name="tour_create_label">Tạo tour mới</string>
    <string name="tour_name">Tên tour</string>
    <string name="tour_short_description">Mô tả ngắn</string>
    <string name="tour_short_description_hint">Giới thiệu về tour du lịch</string>
    <string name="tour_price">Giá tiền (VNĐ)</string>
    <string name="tour_duration">Độ dài tour</string>
    <string name="tour_start">Bắt đầu</string>
    <string name="tour_end">Kết thúc</string>
    <string name="tour_bg_image">Ảnh bìa</string>

    <string name="tour_upload_image">Tải ảnh lên</string>
    <string name="tour_policy_quote">Bằng cách ấn vào nút tạo mới, bạn đồng ý với điều khoản quy định và chính sách của Takitou</string>
    <string name="tour_create">Tạo mới</string>
    <string name="minimum_password">Mật khẩu phải tối thiểu 6 ký tự</string>
    <string name="auth_failed">Xác thực thất bạn, vui lòng kiểm tra email và mật khẩu hoặc đăng ký</string>
    <string name="change_email">Thay đổi Email</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="send_password_reset_email">Gửi email đặt lại mật khẩu</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_name">Họ tên</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="already_have_account">Đã có tài khoản?</string>
    <string name="sign_up_now">Đăng kí</string>
    <string name="create_new_account">Tạo tài khoản</string>
    <string name="create_new_account_to_continue">Tạo mới một tài khoản</string>
    <string name="sign_in_now">Đăng nhập</string>
    <string name="btn_link_to_login">Tài khoản đã tồn tại, hãy đăng nhập</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Thay đổi</string>
    <string name="btn_send">Gửi</string>
    <string name="btn_remove">Xóa</string>
    <string name="btn_sign_out">Đăng xuất</string>
    <string name="lbl_forgot_password">Quên mật khẩu?</string>
    <string name="forgot_password_msg">Chúng tôi đã gửi hướng dẫn đặt lại mật khẩu vào email của bạn.</string>
    <string name="explore">Khám phá</string>
    <string name="tours">Tours</string>
    <string name="notification">Thông báo</string>
    <string name="profile">Hồ sơ</string>

    <string name="where_do_you_wanna_go">Sắp tới bạn muốn đi đâu?</string>
    <string name="enter_provided_code">Nhập mã CODE do hướng dẫn viên cung cấp</string>
    <string name="enter_code">Nhập mã CODE</string>
    <string name="up_coming">Sắp tới</string>
    <string name="popular">Phổ biến</string>
    <string name="tour_guide">Hướng dẫn viên: </string>

    <string name="account_setting">CÀI ĐẶT TÀI KHOẢN</string>
    <string name="profile_information">Sửa thông tin cá nhân</string>
    <string name="for_tour_guide">DÀNH CHO HƯỚNG DẪN VIÊN</string>
    <string name="log_out">Đăng xuất</string>
    <string name="version">Phiên bản</string>
    <string name="build_number">1.0.0</string>
    <string name="confirm">Xác nhận</string>
    <string name="profile_image">Profile image</string>
    <string name="library">Thư viện</string>
    <string name="upload">Tải lên</string>
    <string name="choose_photos">Chọn ảnh</string>
    <string name="enter_your_email">Nhập email của bạn để tiếp tục</string>
    <string name="next">Tiếp tục</string>

    <string name="introduction">Tiểu sử</string>
    <string name="no_introduction_yet">Chưa có tiểu sử</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="no_phone_yet">Chưa có số điện thoại</string>
    <string name="Save"> Lưu </string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="retype_password">Xác nhận mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="change">Thay đổi</string>
    <string name="cover_image">Ảnh bìa</string>
    <string name="rating">Đánh giá</string>
    <string name="duration">Thời gian</string>
    <string name="price">Giá:</string>
    <string name="edit_tour">Chỉnh sửa tour</string>
    <string name="ended">Đã kết thúc</string>

    <string name="announcement">Thông báo chung từ HDV</string>
    <string name="title">Tiêu đề</string>
    <string name="enter_title">Nhập tiêu đề của thông báo</string>
    <string name="content">Nội dung</string>
    <string name="enter_content_notification">Nhập nội dung thông báo</string>
    <string name="newest">Mới nhất</string>
    <string name="tour_dashboard">Tour Dashboard</string>
    <string name="send_notification">Gửi thông báo</string>
    <string name="send_notification_to_all_member">Gửi thông báo cho du khách trong tour</string>

    <string name="send_sos">Yêu cầu khẩn cấp SOS</string>
    <string name="title_sos">Tiêu đề khẩn</string>
    <string name="message_sos">Thông điệp khẩn (Không bắt buộc)</string>
    <string name="enter_content_sos">Nhập thông điệp khẩn cấp bạn muốn gửi tới mọi người...</string>
    <string name="sub_title_sos_commit">Chỉ dùng tính năng này khi thực sự khẩn cấp</string>
    <string name="sos_upload_image">Tải ảnh lên (Không bắt buộc)</string>
    <string name="send_now">Gửi ngay</string>
</resources>