<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<LinearLayout
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/seaweed_script"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/Hello"
        android:textColor="@color/white"
        android:textSize="46sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/signika"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_second_color"
            android:fontFamily="@font/signika"
            android:singleLine="true"
            android:hint="@string/hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/main_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_second_color"
            android:fontFamily="@font/signika"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/main_color" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/signika"
            android:text="@string/forgot_password"
            android:textColor="@color/second_color"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/signika_semibold"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:fontFamily="@font/signika_semibold"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_signin_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika"
            android:text="@string/dont_have_account"
            android:textColor="#81B214"
            android:textSize="16sp" />

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/signika"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/sign_up_now" />
    </LinearLayout>
</LinearLayout>
</ScrollView>