<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:orientation="vertical"
        android:padding="20dp">


        <Toolbar
            android:id="@+id/tb_return"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            android:theme="@style/Theme.AppCompat.NoActionBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/signika_bold"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="46sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/signika"
            android:text="@string/create_new_account_to_continue"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/bg_second_color"
                android:fontFamily="@font/signika"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/main_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/bg_second_color"
                android:fontFamily="@font/signika"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/main_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_second_color"
                android:fontFamily="@font/signika"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/main_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:text="@string/re_password"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_re_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_second_color"
                android:fontFamily="@font/signika"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/main_color" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/signika_semibold"
            android:text="@string/sign_up_now"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:text="@string/already_have_account"
                android:textColor="#81B214"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/signika"
                android:text="@string/sign_in_now"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>