<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:orientation="vertical"
        android:padding="20dp">

        <Toolbar
            android:id="@+id/tb_return_tour_dashboard"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            android:theme="@style/Theme.AppCompat.NoActionBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/signika_bold"
            android:text="@string/send_sos"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/signika"
            android:text="@string/send_notification_to_all_member"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:paddingBottom="5dp"
                android:text="@string/message_sos"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_sos_body"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/bg_second_color"
                android:fontFamily="@font/signika"
                android:gravity="top|left"
                android:hint="@string/enter_content_sos"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:singleLine="true"
                android:textColor="@color/main_color"
                tools:ignore="RtlHardcoded"
                android:textSize="16sp" />


        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="30dp"
            android:paddingTop="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:paddingBottom="5dp"
                android:text="@string/sos_upload_image"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/iv_sos_image"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_second_color"
                    android:fontFamily="@font/signika"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/tour_bg_image" />

                <Button
                    android:id="@+id/btn_upload_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/signika_semibold"
                    android:text="@string/tour_upload_image"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="30dp"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika"
                android:paddingTop="10dp"
                android:text="@string/sub_title_sos_commit"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <Button
                android:id="@+id/btn_send_sos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/signika_semibold"
                android:text="@string/send_now"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>